--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<head>
+<style>
+body {
+  background-color: #0a0e12;
+}
+</style>
+</head>
 <p><img src="https://komarev.com/ghpvc/?username=PlexusNetworkSystem&amp;label=Profile+Views&amp;color=3E9FEF" alt="profile counter">
 <img src="https://img.shields.io/discord/939514422613901352?label=Discord" alt="Discord"></p>
 <h2 id="-socials-">🌐 Socials:</h2>
@@ -11,3 +18,4 @@
 <h2 id="-github-trophies">🏆 GitHub Trophies</h2>
 <p><img src="https://github-profile-trophy.vercel.app/?username=PlexusNetworkSystem&amp;theme=gruvbox&amp;no-frame=true&amp;no-bg=false&amp;margin-w=4" alt=""></p>
 <hr>
+
