--- a/index.html
+++ b/index.html
@@ -1,24 +1,37 @@
+<html>
 <head>
-<style>
-body {
-  background-color: #0a0e12;
-} 
-h2, h1 {
-  color: #ffffff ;
-  }
-</style>
+  <title>Plexus Network Team</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="media_files/icon.png">
+    <script type="text/javascript" src="js/script.js"></script>
 </head>
-<p><img src="https://komarev.com/ghpvc/?username=PlexusNetworkSystem&amp;label=Profile+Views&amp;color=3E9FEF" alt="profile counter">
-<img src="https://img.shields.io/discord/939514422613901352?label=Discord" alt="Discord"></p>
-<h2 id="-socials-">🌐 Socials:</h2>
-<p><a href="https://discord.gg/dkVgDuS5AY"><img src="https://img.shields.io/badge/Discord-%237289DA.svg?logo=discord&amp;logoColor=white" alt="Discord"></a> <a href="https://twitch.tv/plexus_system"><img src="https://img.shields.io/badge/Twitch-%239146FF.svg?logo=Twitch&amp;logoColor=white" alt="Twitch"></a> <a href="https://www.youtube.com/channel/UC_YNbfCMFmSeYsK2_i1HR-Q"><img src="https://img.shields.io/badge/YouTube-%23FF0000.svg?logo=YouTube&amp;logoColor=white" alt="YouTube"></a> </p>
-<h1 id="-tech-stack-">💻 Tech Stack:</h1>
-<p><img src="https://img.shields.io/badge/c-%2300599C.svg?style=for-the-badge&amp;logo=c&amp;logoColor=white" alt="C"> <img src="https://img.shields.io/badge/c%23-%23239120.svg?style=for-the-badge&amp;logo=c-sharp&amp;logoColor=white" alt="C#"> <img src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&amp;logo=c%2B%2B&amp;logoColor=white" alt="C++"> <img src="https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&amp;logo=css3&amp;logoColor=white" alt="CSS3"> <img src="https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&amp;logo=html5&amp;logoColor=white" alt="HTML5"> <img src="https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&amp;logo=javascript&amp;logoColor=%23F7DF1E" alt="JavaScript"> <img src="https://img.shields.io/badge/perl-%2339457E.svg?style=for-the-badge&amp;logo=perl&amp;logoColor=white" alt="Perl"> <img src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&amp;logo=python&amp;logoColor=ffdd54" alt="Python"> <img src="https://img.shields.io/badge/ruby-%23CC342D.svg?style=for-the-badge&amp;logo=ruby&amp;logoColor=white" alt="Ruby"> <img src="https://img.shields.io/badge/shell_script-%23121011.svg?style=for-the-badge&amp;logo=gnu-bash&amp;logoColor=white" alt="Shell Script"> <img src="https://img.shields.io/badge/.NET-5C2D91?style=for-the-badge&amp;logo=.net&amp;logoColor=white" alt=".Net"> <img src="https://img.shields.io/badge/Electron-191970?style=for-the-badge&amp;logo=Electron&amp;logoColor=white" alt="Electron.js"> <img src="https://img.shields.io/badge/Qt-%23217346.svg?style=for-the-badge&amp;logo=Qt&amp;logoColor=white" alt="Qt"> <img src="https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&amp;logo=mysql&amp;logoColor=white" alt="MySQL"> <img src="https://img.shields.io/badge/blender-%23F5792A.svg?style=for-the-badge&amp;logo=blender&amp;logoColor=white" alt="Blender"> <img src="https://img.shields.io/badge/Gimp-657D8B?style=for-the-badge&amp;logo=gimp&amp;logoColor=FFFFFF" alt="Gimp Gnu Image Manipulation Program"> <img src="https://img.shields.io/badge/Inkscape-e0e0e0?style=for-the-badge&amp;logo=inkscape&amp;logoColor=080A13" alt="Inkscape"> <img src="https://img.shields.io/badge/docker-%230db7ed.svg?style=for-the-badge&amp;logo=docker&amp;logoColor=white" alt="Docker"></p>
-<h1 id="-github-stats-">📊 GitHub Stats:</h1>
-<p><img src="https://github-readme-stats.vercel.app/api?username=PlexusNetworkSystem&amp;theme=dark&amp;hide_border=false&amp;include_all_commits=true&amp;count_private=false" alt=""><br/>
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=PlexusNetworkSystem&amp;theme=dark&amp;hide_border=false" alt=""><br/>
-<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=PlexusNetworkSystem&amp;theme=dark&amp;hide_border=false&amp;include_all_commits=true&amp;count_private=false&amp;layout=compact" alt=""></p>
-<h2 id="-github-trophies">🏆 GitHub Trophies</h2>
-<p><img src="https://github-profile-trophy.vercel.app/?username=PlexusNetworkSystem&amp;theme=gruvbox&amp;no-frame=true&amp;no-bg=false&amp;margin-w=4" alt=""></p>
-<hr>
 
+<body>
+
+    <div class="div_left">
+        <div class="div_left_up">
+          <div class="main_name_picture" onclick="change_address('github_readme.html');">
+                <div class="profile_picture">
+                    <img src="https://avatars.githubusercontent.com/u/100467384?v=4" alt="profile_picture">
+                </div>
+                <div class="profile_name">
+                    <h1>Plexus Network Team</h1>
+                </div>
+          </div>
+
+        </div>
+        <div class="div_left_down">
+            <img class="icon_of_links_div" src="media_files/youtube.png" onclick="goto_address('https://www.youtube.com/channel/UC_YNbfCMFmSeYsK2_i1HR-Q')" alt="youtube">
+            <img class="icon_of_links_div" src="media_files/twitch.png" onclick="goto_address('https://www.twitch.tv/plexus_system')" alt="twtich">
+            <img class="icon_of_links_div" src="media_files/github.png" onclick="goto_address('https://github.com/PlexusNetworkSystem')" alt="github">
+            <img class="icon_of_links_div" src="media_files/patreon.png" onclick="goto_address('https://www.patreon.com/plexusnetworksystem')" alt="patreon">
+            <img class="icon_of_links_div" src="media_files/discord.png" onclick="goto_address('https://discord.com/invite/dkVgDuS5AY')" alt="discord">
+            <img class="icon_of_links_div" src="media_files/icon.png" onclick="window.location.href = 'https://plexusnetworksystem.github.io/Servers/';" alt="main"></img>
+           </div>
+    </div>
+    <div class="div_right">
+        <iframe id="iframe" src="github_readme.html" width="100%" height="100%">
+        </iframe>
+    </div>
+</body>
+</html>
